--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,9 +1,9 @@
 <% provide :title, t("title.show_all_category") %>
 <h2><%= t "category.index.all" %></h2>
-<div class="row">
+<div class="row panel">
   <table class="table">
     <thead>
-      <tr>
+      <tr class="table-title">
         <td>#</td>
         <td><%= t "category.index.title" %></td>
         <td></td>
@@ -36,4 +36,7 @@
       <% end %>
     </tbody>
   </table>
+</div>
+<div class="row exam-pagination">
+  <%= will_paginate @categories %>
 </div>
