--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
       All Category
     <% end %>
   </div>
-  <div class="well user-content" style="margin-top: 20px;">
+  <div class="well user-content panel" style="margin-top: 20px;">
       <table class="table">
         <thead>
           <tr>
