--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,5 @@
 <% provide :title, t("title.sign_up") %>
-<h2><%= t("devise.sign_up") %></h2>
-
+<h2 style="text-align: center;"><%= t("devise.sign_up") %></h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -10,6 +9,14 @@
       <%= f.email_field :email, autofocus: true, class: "form-control" %>
     </div>
   </div>
+
+  <div class="col-md-6 col-md-offset-3">
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, required: true, class: "form-control" %>
+    </div>
+  </div>
+
 
   <div class="col-md-6 col-md-offset-3">
     <div class="field">
@@ -35,5 +42,9 @@
 <% end %>
 
 <div class="col-md-6 col-md-offset-3">
-  <%= render "devise/shared/links" %>
+  <div class="social-auth-links text-center">
+          <p>- OR -</p>
+          <a href="/users/auth/facebook" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
+          <a href="/users/auth/google_oauth2" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using Google+</a>
+  </div>
 </div>
