--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,25 +5,12 @@
   </div>
   <div class="panel-body">
     <table class="table table-striped">
-      <tr>
+      <tr class="table-title">
         <td><%= t ".name" %></td>
-        <td></td>
       </tr>
       <% @my_groups.each do |group| %>
         <tr>
           <td><%= link_to group.name, group_path(group) %></td>
-          <td>
-            <%= link_to edit_group_path(group), class: "btn btn-primary" do  %>
-              <span class="glyphicon glyphicon-edit"></span>
-              <%= t "button.edit" %>
-            <% end %>
-            <%= link_to group_path(group),
-              method: :delete, data: {confirm: t("message.confirm")},
-              class: "btn btn-danger" do %>
-              <span class="glyphicon glyphicon-remove"></span>
-              <%= t "button.delete" %>
-            <% end %>
-          </td>
         </tr>
       <% end %>
     </table>
