--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t("title.new_group") %>
-<div class="panel panel-primary">
+<div class="panel panel-green">
   <div class="panel-heading" style="font-size:large;">
-    <%= t ".new_group" %>
+    Create new group !
   </div>
   <div class="panel-body"><%= render "form" %></div>
 </div>
