--- a/app/assets/stylesheets/my_class.scss
+++ b/app/assets/stylesheets/my_class.scss
@@ -8,3 +8,20 @@
     padding-top: 20px;
   }
 }
+.timer{
+  padding: 2%;
+  position: fixed;
+  top: 150px;
+  left: 77%;
+  border: 1px solid #e6e6e6;
+  background-color: #ffffcc;
+}
+
+#clock{
+  font-size: 50px;
+}
+#finish{
+	position: fixed;
+	top: 400px;
+	left: 79.8%;
+}
