--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,19 +1,46 @@
 <% provide :title, @group.name %>
 <div class="row group-show container-fluid panel">
-  <h2><%= @group.name %></h2>
+  <div class="row">
+    <div class="col-md-10"> <h2><%= @group.name %></h2></div>
+    <div class="col-md-2">
+      <div class="btn-group">
+        <button type="button" class="btn btn-success">Config</button>
+        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+          <span class="caret"></span>
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <%= link_to edit_group_path(@group) do  %>
+              <span class="glyphicon glyphicon-edit"></span>
+              <%= t "button.edit" %>
+            <% end %>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <%= link_to group_path(@group),
+              method: :delete, data: {confirm: t("message.confirm")} do %>
+              <span class="glyphicon glyphicon-remove"></span>
+              <%= t "button.delete" %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <p><%= @group.description %></p>
 </div>
 <div class="row container-fluid group-show-content">
   <div class="col-md-8 panel">
     <div class="row">
-      <table class="table table-hover">
+      <table class="table table-bordered">
         <thead>
-          <tr>
+          <tr class="table-title">
             <td>Student</td>
             <td>Exam</td>
             <td>Status</td>
             <td>Result</td>
-            <td></td>
+            <td>Action</td>
           </tr>
           <%= render partial: "filter" %>
         </thead>
