--- a/app/views/socials/infor.html.erb
+++ b/app/views/socials/infor.html.erb
@@ -2,18 +2,18 @@
   <%= render "shared/error_messages", object: f.object %>
   <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.text_field :name, required: true, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.hidden_field :email,value: @email, class: "form-control" %>
+    <%= f.hidden_field :email,value: @email, required: true, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :password %>
-    <%= f.password_field :password, class: "form-control" %>
+    <%= f.password_field :password, required: true, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, class: "form-control" %>
+    <%= f.password_field :password_confirmation, required: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
