--- a/app/views/user_groups/index.html.erb
+++ b/app/views/user_groups/index.html.erb
@@ -1,31 +1,38 @@
-<div class="row">
-  <div class="col-md-8">
+<div class="row panel panel-default">
+  <div class="col-md-10">
     <h2><%= @group.name %></h2>
     <p><%= @group.description %></p>
   </div>
-  <div class="col-md-4">
-    <ul class="nav nav-pills">
-      <li role="presentation", class="active" >
-        <%= link_to add_user_path(group_id: @group.id) do %>
-          <i class="fa fa-plus"></i>
-          <%= t("button.add_user") %>
-        <% end %>
-      </li>
-    </ul>
+  <div class="col-md-2">
+    <div class="btn-group">
+        <button type="button" class="btn btn-success">Action</button>
+        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+          <span class="caret"></span>
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <%= link_to add_user_path(group_id: @group.id) do %>
+              <i class="fa fa-plus"></i>
+              <%= t("button.add_user") %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
   </div>
 </div>
 <hr>
-<div class="row">
+<div class="row panel panel-default">
   <table class="table">
-    <tr>
+    <tr class="table-title">
       <td>#</td>
       <td><%= t "model.user.name" %></td>
       <td><%= t "model.user.email" %></td>
       <td></td>
     </tr>
-    <% @students.each do |student| %>
+    <% @students.each_with_index do |student, index| %>
       <tr>
-        <td></td>
+        <td><%= index + 1 %></td>
         <td>
           <% if student.name.size < 1 %>
             <span class="label label-danger"><%= t("title.no_name") %></span>
@@ -34,8 +41,18 @@
           <% end %>
         </td>
         <td><%= student.email %></td>
-        <td class="text-center"><a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a></td>
+        <td class="text-center">
+          <% @user_group  = UserGroup.find_by(user_id: student.id, group_id: @group.id) %> 
+          <%= link_to group_user_group_path(@group, @user_group),
+            method: :delete, data: {confirm: "Are you sure remove ?"},
+            class: "btn btn-danger btn-xs"  do  %>
+            <span class="glyphicon glyphicon-remove"></span> Remove
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </table>
+</div>
+<div class="row exam-pagination">
+  <%= will_paginate @students %>
 </div>
