--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-green">
+<div class="panel panel-green" style="margin-left: -14px;width: 102.5%;">
   <div class="panel-heading" style="font-size:large;">
     <%= t "exams.new" %>
   </div>
