--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,7 +21,7 @@
     <%= f.label :avatar %>
     <%= f.file_field :avatar %>
   </div>
-  <h4 style="color:red; margin-top: 5%; ">Questions</h4>
+  <h4 style="color:red; margin-top: 5%; ">Answers</h4>
   <hr>
   <div class="choice">
     <%= f.fields_for :answers do |builder| %>
