--- a/app/views/static_page/_marketing.html.erb
+++ b/app/views/static_page/_marketing.html.erb
@@ -1,24 +1,29 @@
+ <style type="text/css">
+ .featurette-heading {
+    margin-top: 0;
+ }
+ </style>
  <div class="marketing">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="/assets/no_avatar.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="/assets/exam.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Exam</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>Quiz-Creator has been a great tool to create online training for hundreds of employees in the world. Quiz-Creator has allowed us to provide over 3,000 sessions, anytime & anywhere.</p>
+          <p><a class="btn btn-default" href="/users/sign_in" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="/assets/test.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Test</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>Makes training & testing super easy. You only create test , assign student to group. Quizzes are fun! Give your users a chance to play with their knowledge</p>
+          <p><a class="btn btn-default" href="/users/sign_in" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="/assets/result.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Result</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>After the test, you can know right exam results .You don not need wait teacher check your exam .Quiz-Creator take it easily, thats right, view your result now.Join now! </p>
+          <p><a class="btn btn-default" href="/users/sign_in" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -29,8 +34,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Easy to use with more function <span class="text-muted">Easy to control student.</span></h2>
+          <p class="lead">Manage classes and quizzes.Attach multimedia files to questions.Make quizzes in multiple languages.Access from any Internet-connected computer.Allow students to complete and review</p>
         </div>
         <div class="col-md-5">
           <%= image_tag "features_2", class: "featurette-image img-responsive center-block" %>
@@ -41,8 +46,8 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Easy to assign exam for student. <span class="text-muted">See it now.</span></h2>
+          <p class="lead">Add 3 questions or 30. Make your quiz as short or as long as you want.Reinforce what students should know by adding explanations to each question.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <%= image_tag "create-online-quiz", class: "featurette-image img-responsive center-block" %>
@@ -53,8 +58,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">And lastly, we can see a result. <span class="text-muted">Check now.</span></h2>
+          <p class="lead">Allow students to see a feedback of the questions they got right and wrong.Sign up for a free account and give it a whirl </p>
         </div>
         <div class="col-md-5">
           <%= image_tag "integrate-quiz-exam-api", class: "featurette-image img-responsive center-block" %>
