--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,12 +88,14 @@ header .container {
 footer {
   margin-top: 45px;
   padding-top: 5px;
+  background-color: #15224f;
+  height: 15%;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
   a {
     color: $gray;
     &:hover {
-      color: $gray-darker;
+      color: white;
     }
   }
   small {
@@ -290,4 +292,8 @@ footer {
 
 .custom-select {
   width: 50%;
+}
+
+.custom-primary {
+  margin-left: -163%;
 }
