--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -10,13 +10,15 @@
           <span class="sr-only">Toggle Dropdown</span>
         </button>
         <ul class="dropdown-menu" role="menu">
-          <li>
-             <%= link_to edit_exam_path @exam do %>
-              <i class="fa fa-pencil fa-fw"></i>
-              <%= t("button.edit") %>
-            <% end %>
-          </li>
-          <li class="divider"></li>
+          <% unless ExamGroup.all.pluck(:exam_id).include? @exam.id %> 
+            <li>
+               <%= link_to edit_exam_path @exam do %>
+                <i class="fa fa-pencil fa-fw"></i>
+                <%= t("button.edit") %>
+              <% end %>
+            </li>
+            <li class="divider"></li>
+          <% end %>
           <li>
              <%= link_to exam_path(@exam, format: "pdf") do %>
               <i class="fa fa-file-pdf-o fa-fw"></i>
@@ -75,16 +77,18 @@
               <td><%= question.score %></td>
               <td>
                 <%= link_to edit_exam_question_path(@exam, question),
-                  class: "btn btn-primary" do %>
-                  <i class="fa fa-pencil fa-fw"></i>
-                  <%= t("button.edit") %>
-                <% end %>
-                <%= link_to exam_question_path(@exam, question), 
-                  method: :delete,
-                  data: {confirm: "Are you sure ?"}, 
-                  class: "btn btn-danger" do %>
-                  <i class="fa fa-trash-o fa-fw"></i>
-                  <%= t("button.delete") %>
+                    class: "btn btn-primary" do %>
+                    <i class="fa fa-pencil fa-fw"></i>
+                    <%= t("button.edit") %>
+                  <% end %>
+                <% unless ExamGroup.all.pluck(:exam_id).include? @exam.id %>
+                  <%= link_to exam_question_path(@exam, question), 
+                    method: :delete,
+                    data: {confirm: "Are you sure ?"}, 
+                    class: "btn btn-danger" do %>
+                    <i class="fa fa-trash-o fa-fw"></i>
+                    <%= t("button.delete") %>
+                  <% end %>
                 <% end %>
               </td>
             </tr>
