--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <style type="text/css">
-  
+
 
 /************************************************************
 *************************Footer******************************
@@ -9,7 +9,7 @@
 @import url(http://fonts.googleapis.com/css?family=Fjalla+One);
 @import url(http://fonts.googleapis.com/css?family=Gudea);
 .footer1 {
-    background: #fff url("../images/footer/footer-bg.png") repeat scroll left top;
+  background: #fff url("../images/footer/footer-bg.png") repeat scroll left top;
   padding-top: 40px;
   padding-right: 0;
   padding-bottom: 20px;
@@ -37,53 +37,53 @@
 }
 
 .title-widget::before {
-    background-color: #ea5644;
-    content: "";
-    height: 22px;
-    left: 0px;
-    position: absolute;
-    top: -2px;
-    width: 5px;
+  background-color: #ea5644;
+  content: "";
+  height: 22px;
+  left: 0px;
+  position: absolute;
+  top: -2px;
+  width: 5px;
 }
 
 
 
 .widget_nav_menu ul {
-    list-style: outside none none;
-    padding-left: 0;
+  list-style: outside none none;
+  padding-left: 0;
 }
 
 .widget_archive ul li {
-    background-color: rgba(0, 0, 0, 0.3);
-    content: "";
-    height: 3px;
-    left: 0;
-    position: absolute;
-    top: 7px;
-    width: 3px;
+  background-color: rgba(0, 0, 0, 0.3);
+  content: "";
+  height: 3px;
+  left: 0;
+  position: absolute;
+  top: 7px;
+  width: 3px;
 }
 
 
 .widget_nav_menu ul li {
-    font-size: 13px;
-    font-weight: 700;
-    line-height: 20px;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 20px;
   position: relative;
-    text-transform: uppercase;
+  text-transform: uppercase;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-    margin-bottom: 7px;
-    padding-bottom: 7px;
+  margin-bottom: 7px;
+  padding-bottom: 7px;
   width:95%;
 }
 
 
 
 .title-median {
-    color: #636363;
-    font-size: 20px;
-    line-height: 20px;
-    margin: 0 0 15px;
-    text-transform: uppercase;
+  color: #636363;
+  font-size: 20px;
+  line-height: 20px;
+  margin: 0 0 15px;
+  text-transform: uppercase;
   font-family: 'Fjalla One', sans-serif;
 }
 
@@ -91,230 +91,100 @@
 
 
 #social:hover {
-          -webkit-transform:scale(1.1); 
--moz-transform:scale(1.1); 
--o-transform:scale(1.1); 
-      }
-      #social {
-        -webkit-transform:scale(0.8);
-                /* Browser Variations: */
--moz-transform:scale(0.8);
--o-transform:scale(0.8); 
--webkit-transition-duration: 0.5s; 
--moz-transition-duration: 0.5s;
--o-transition-duration: 0.5s;
-      }           
+  -webkit-transform:scale(1.1); 
+  -moz-transform:scale(1.1); 
+  -o-transform:scale(1.1); 
+}
+#social {
+  -webkit-transform:scale(0.8);
+  /* Browser Variations: */
+  -moz-transform:scale(0.8);
+  -o-transform:scale(0.8); 
+  -webkit-transition-duration: 0.5s; 
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+}           
 /* 
     Only Needed in Multi-Coloured Variation 
-                                               */
-      .social-fb:hover {
-        color: #3B5998;
-      }
-      .social-tw:hover {
-        color: #4099FF;
-      }
-      .social-gp:hover {
-        color: #d34836;
-      }
-      .social-em:hover {
-        color: #f39c12;
-      }
-      .nomargin { margin:0px; padding:0px;}
+    */
+    .social-fb:hover {
+      color: #3B5998;
+    }
+    .social-tw:hover {
+      color: #4099FF;
+    }
+    .social-gp:hover {
+      color: #d34836;
+    }
+    .social-em:hover {
+      color: #f39c12;
+    }
+    .nomargin { margin:0px; padding:0px;}
 
 
 
 
 
-.footer-bottom {
-    background-color: #15224f;
-    min-height: 30px;
-    width: 100%;
-}
-.copyright {
-    color: #fff;
-    line-height: 30px;
-    min-height: 30px;
-    padding: 7px 0;
-}
-.design {
-    color: #fff;
-    line-height: 30px;
-    min-height: 30px;
-    padding: 7px 0;
-    text-align: right;
-}
-.design a {
-    color: #fff;
-}
+    .footer-bottom {
+      background-color: #15224f;
+      height: 155px;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+    }
+    .copyright {
+      color: #fff;
+      line-height: 30px;
+      min-height: 30px;
+      padding: 7px 0;
+    }
+    .design {
+      color: #fff;
+      line-height: 30px;
+      min-height: 30px;
+      padding: 7px 0;
+      text-align: right;
+    }
+    .design a {
+      color: #fff;
+    }
 
 
 /************************************************************
 *************************Footer******************************
 *************************************************************/
 </style>
+  <footer class="footer">
 
-<!--footer-->
-<footer class="footer1">
-<div class="container">
+    <div class="container">
 
-<div class="row"><!-- row -->
-            
-                <div class="col-lg-3 col-md-3"><!-- widgets column left -->
-                <ul class="list-unstyled clear-margins"><!-- widgets -->
-                        
-                          <li class="widget-container widget_nav_menu"><!-- widgets list -->
-                    
-                                <h1 class="title-widget">Useful links</h1>
-                                
-                                <ul>
-                                  <li><a  href="#"><i class="fa fa-angle-double-right"></i> About Us</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i> Contact Us</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i> Success Stories</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i> PG Courses</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i> Achiever's Batch</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Regular Batch</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Test & Discussion</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Fast Track T & D</a></li>
-                                </ul>
-                    
-              </li>
-                            
-                        </ul>
-                         
-                      
-                </div><!-- widgets column left end -->
-                
-                
-                
-                <div class="col-lg-3 col-md-3"><!-- widgets column left -->
-            
-                <ul class="list-unstyled clear-margins"><!-- widgets -->
-                        
-                          <li class="widget-container widget_nav_menu"><!-- widgets list -->
-                    
-                                <h1 class="title-widget">Useful links</h1>
-                                
-                                <ul>
-                  <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Test Series Schedule</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Postal Coaching</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  PG Dr. Bhatia Books</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  UG Courses</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Satellite Education</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  Study Centres</a></li>
-                                    <li><a  href="#"><i class="fa fa-angle-double-right"></i>  State P.G. Mocks</a></li>
-                                    <li><a  href="#" target="_blank"><i class="fa fa-angle-double-right"></i> Results</a></li>
-                                    
-                                </ul>
-                    
-              </li>
-                            
-                        </ul>
-                         
-                      
-                </div><!-- widgets column left end -->
-                
-                
-                
-                <div class="col-lg-3 col-md-3"><!-- widgets column left -->
-            
-                <ul class="list-unstyled clear-margins"><!-- widgets -->
-                        
-                          <li class="widget-container widget_nav_menu"><!-- widgets list -->
-                    
-                                <h1 class="title-widget">Useful links</h1>
-                                
-                                <ul>
+      <div class="row">
 
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-                <li><a href="#"><i class="fa fa-angle-double-right"></i> Enquiry Form</a></li>
-        <li><a href="#"><i class="fa fa-angle-double-right"></i> Online Test Series</a></li>
-        <li><a href="#"><i class="fa fa-angle-double-right"></i> Grand Tests Series</a></li>
-        <li><a href="#"><i class="fa fa-angle-double-right"></i> Subject Wise Test Series</a></li>
-        <li><a href="#"><i class="fa fa-angle-double-right"></i> Smart Book</a></li>
-        <li><a href="#"><i class="fa fa-angle-double-right"></i> Test Centres</a></li>
-                <li><a href="#"><i class="fa fa-angle-double-right"></i>  Admission Form</a></li>
-        <li><a href="#"><i class="fa fa-angle-double-right"></i>  Computer Live Test</a></li>
+          <div class="copyright">
 
-                                </ul>
-                    
-              </li>
-                            
-                        </ul>
-                         
-                      
-                </div><!-- widgets column left end -->
-                
-                
-                <div class="col-lg-3 col-md-3"><!-- widgets column center -->
-                
-                   
-                    
-                        <ul class="list-unstyled clear-margins"><!-- widgets -->
-                        
-                          <li class="widget-container widget_recent_news"><!-- widgets list -->
-                    
-                                <h1 class="title-widget">Contact Detail </h1>
-                                
-                                <div class="footerp"> 
-                                
-                                <h2 class="title-median">Webenlance Pvt. Ltd.</h2>
-                                <p><b>Email id:</b> <a href="mailto:info@webenlance.com">info@webenlance.com</a></p>
-                                <p><b>Helpline Numbers </b>
+            © 2016, HANOI UNIVERSITY OF SCIENCE AND TECHNOLOGY
 
-    <b style="color:#ffc106;">(8AM to 10PM):</b>  +91-8130890090, +91-8130190010  </p>
-    
-    <p><b>Corp Office / Postal Address</b></p>
-    <p><b>Phone Numbers : </b>7042827160, </p>
-    <p> 011-27568832, 9868387223</p>
-                                </div>
-                                
-                                <div class="social-icons">
-                                
-                                  <ul class="nomargin">
-                                    
-                <a href="https://www.facebook.com/bootsnipp"><i class="fa fa-facebook-square fa-3x social-fb" id="social"></i></a>
-              <a href="https://twitter.com/bootsnipp"><i class="fa fa-twitter-square fa-3x social-tw" id="social"></i></a>
-              <a href="https://plus.google.com/+Bootsnipp-page"><i class="fa fa-google-plus-square fa-3x social-gp" id="social"></i></a>
-              <a href="mailto:bootsnipp@gmail.com"><i class="fa fa-envelope-square fa-3x social-em" id="social"></i></a>
-                                    
-                                    </ul>
-                                </div>
-                        </li>
-                          </ul>
-                       </div>
-                </div>
-</div>
-</footer>
-<!--header-->
-
-<div class="footer-bottom">
-
-  <div class="container">
-
-    <div class="row">
-
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-
-        <div class="copyright">
-
-          © 2015, Webenlance, All rights reserved
+          </div>
 
         </div>
 
-      </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+          <div class="design">
 
-        <div class="design">
+           <a href="#">Quizz Creator </a> |  <a target="_blank" href="http://www.webenlance.com">Web Design & Development by Truong Loc Binh</a>
 
-           <a href="#">Franchisee </a> |  <a target="_blank" href="http://www.webenlance.com">Web Design & Development by Webenlance</a>
+         </div>
 
-        </div>
+       </div>
 
-      </div>
+     </div>
 
-    </div>
+   </div>
 
-  </div>
-
-</div>
+ </footer>
