--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
             <%= current_user.email %>
           </div>
           <div class="profile-usertitle-job">
-            Developer
+            <%= current_user.role %>
           </div>
         </div>
         <!-- END SIDEBAR USER TITLE -->
@@ -27,44 +27,13 @@
           <button type="button" class="btn btn-success btn-sm">Follow</button>
           <button type="button" class="btn btn-danger btn-sm">Message</button>
         </div>
-        <!-- END SIDEBAR BUTTONS -->
-        <!-- SIDEBAR MENU -->
-        <div class="profile-usermenu">
-          <ul class="nav">
-            <li class="active">
-              <a href="#">
-              <i class="glyphicon glyphicon-home"></i>
-              Overview </a>
-            </li>
-            <li>
-              <a href="#">
-              <i class="glyphicon glyphicon-user"></i>
-              Account Settings </a>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-              <i class="glyphicon glyphicon-ok"></i>
-              Tasks </a>
-            </li>
-            <li>
-              <a href="#">
-              <i class="glyphicon glyphicon-flag"></i>
-              Help </a>
-            </li>
-          </ul>
-        </div>
-        <!-- END MENU -->
       </div>
     </div>
     <div class="col-md-9">
-            <div class="profile-content">
-         Some user related content goes here...
-            </div>
+      <div class="profile-content">
+      </div>
     </div>
   </div>
 </div>
-<center>
-<strong>Powered by <a href="http://j.mp/metronictheme" target="_blank">KeenThemes</a></strong>
-</center>
 <br>
 <br>
